[package]
name = "oxedyne_fe2o3_steel"
version = "0.5.0"
authors = ["h00gs <hello@oxedyne.io>"]
edition = "2021"
license = "BSD-2-Clause/Apache-2.0"
description = "Hematite TCP server including HTTPS, WebSocket and SMTPS support."
repository = "https://github.com/oxedyne-io/fe2o3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "steel"
path = "src/main.rs"

[dependencies]
oxedyne_fe2o3_bot 				= { path = "../fe2o3_bot" }
oxedyne_fe2o3_core 				= { path = "../fe2o3_core" }
oxedyne_fe2o3_crypto			= { path = "../fe2o3_crypto" }
oxedyne_fe2o3_data 				= { path = "../fe2o3_data" }
oxedyne_fe2o3_hash 				= { path = "../fe2o3_hash" }
oxedyne_fe2o3_iop_crypto		= { path = "../fe2o3_iop_crypto" }
oxedyne_fe2o3_iop_db			= { path = "../fe2o3_iop_db" }
oxedyne_fe2o3_iop_hash			= { path = "../fe2o3_iop_hash" }
oxedyne_fe2o3_jdat 				= { path = "../fe2o3_jdat" }
oxedyne_fe2o3_namex				= { path = "../fe2o3_namex" }
oxedyne_fe2o3_net				= { path = "../fe2o3_net" }
oxedyne_fe2o3_o3db_sync 				= { path = "../fe2o3_o3db_sync" }
oxedyne_fe2o3_stds				= { path = "../fe2o3_stds" }
oxedyne_fe2o3_syntax			= { path = "../fe2o3_syntax" }
oxedyne_fe2o3_text				= { path = "../fe2o3_text" }
oxedyne_fe2o3_tui				= { path = "../fe2o3_tui" }

notify = "6.1.1"
rustls-pemfile = "2"
rustls = "0.22"
rcgen = "0.12.0"
tokio = { version = "1.35", features = ["full"] }
tokio-rustls = "0.25"

# App.
crossterm = "0.27"
rpassword = "5.0.1"
secrecy = "0.8.0"
zeroize = { version = "1.4.2", features = ["zeroize_derive"] }

# App dev js bundling.
anyhow = "1.0"
swc = "8.0.0"
swc_bundler = "6.0.0"
swc_common = { version = "5.0.0", features = ["tty-emitter"] }
swc_config = "1.0.0"
swc_ecma_loader = { version = "5.0.0", features = ["node", "cache"] }
swc_ecma_parser = "6.0.0"
swc_ecma_codegen = "5.0.0"
swc_ecma_transforms_module = "6.0.0"
swc_ecma_visit = "5.0.0"
swc_ecma_ast = "5.0.0"
swc_ecma_transforms_base = "6.0.0"

# App sass compilation to css.
grass = "0.13"

[build-dependencies]
oxedyne_fe2o3_core 				= { path = "../fe2o3_core" }

[dev-dependencies]
# For test client
rustls-pki-types = "1.0"
webpki-roots = "0.26"

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1"
