[package]
name = "oxedyne_fe2o3_sys"
version = "0.5.0"
authors = ["h00gs <hello@oxedyne.io>"]
edition = "2021"
license = "BSD-2-Clause/Apache-2.0"
description = "Hematite host-statistics library: reads CPU, memory, load, disk, network and process metrics from the operating system."
repository = "https://github.com/oxedyne-io/fe2o3"

[dependencies]
oxedyne_fe2o3_core              = { path = "../fe2o3_core" }
